...
      <Tabs.Screen
        name="discover"
        options={{ title: 'Discover' }}
      />
      <Tabs.Screen
        name="camera"
        options={{ title: 'Camera' }}
      />
      <Tabs.Screen
        name="inbox"
        options={{ title: 'Gasps' }}
      />
      <Tabs.Screen
        name="chat"
        options={{ title: 'Chat' }}
      />
      <Tabs.Screen
        name="studio"
        options={{ title: 'Studio' }}
      />
      <Tabs.Screen
        name="profile"
        options={{ title: 'Profile' }}
      />
    </Tabs>
...
